[package]
name = "spotify-oauth"
version = "0.3.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "An implementation of the Spotify Authorization Code Flow in Rust"
documentation = "https://docs.rs/spotify-oauth/"
homepage = "https://github.com/FrictionlessPortals/spotify-oauth"
repository = "https://github.com/FrictionlessPortals/spotify-oauth"
keywords = ["spotify", "api", "oauth", "async"]
exclude = [
    ".env.example",
    ".env",
]

[lib]
name = "spotify_oauth"
path = "src/lib.rs"

[dependencies]
url = "2.2"
rand = "0.8"
strum = "0.23"
chrono = "0.4"
surf = "2.3"
base64 = "0.13"
dotenv = "0.15"
serde_json = "1"
strum_macros = "0.23"
snafu = "=0.6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
open = "2"
