[package]
name = "spotify-oauth"
version = "0.3.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "An implementation of the Spotify Authorization Code Flow in Rust"
documentation = "https://docs.rs/spotify-oauth/"
homepage = "https://github.com/FrictionlessPortals/spotify-oauth"
repository = "https://github.com/FrictionlessPortals/spotify-oauth"
keywords = ["spotify", "api", "oauth", "async"]
exclude = [
    ".env.example",
    ".env",
]

[patch.crates-io]
spotify-oauth = { path = "." }

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "=0.6"
strum = "0.23"
strum_macros = "0.23"
url = "2.2"

surf = { version = "2.3", optional = true }

[features]
default = []
surf-client = ["surf"]

[dev-dependencies]
spotify-oauth = { version = "*", features = ["surf-client"] }
async-std = { version = "1", features = ["attributes"] }
dotenv = "0.15"
open = "2"
